<resources>
    <string name="app_name">Atv13 CRUDSQLite Heranca</string>
    <string name="nome_aluno">Matheus Augusto Marti</string>
    <string name="ra_aluno">RA: 1110482313017</string>
    <string name="inicio">Aluguel de Livros e Revistas</string>
    <string name="nome">Nome</string>
    <string name="codigo">Código</string>
    <string name="qtd_paginas">Qtde. de Páginas</string>
    <string name="isbn">ISBN</string>
    <string name="edicao">Edição</string>
    <string name="issn">ISSN</string>
    <string name="aluno">Aluno</string>
    <string name="exemplar">Exemplar</string>
    <string name="data_retirada">Data de Retirada</string>
    <string name="data_devolucao">Data de Devolução</string>
    <string name="ra">RA</string>
    <string name="email">E-mail</string>
    <string name="livro">Livro</string>
    <string name="revista">Revista</string>
    <string name="aluguel">Aluguel</string>
    <string name="inserir">Inserir</string>
    <string name="modificar">Modificar</string>
    <string name="excluir">Excluir</string>
    <string name="buscar">Buscar</string>
    <string name="listar">Listar</string>
</resources>